# PHONEIP

./: .gitignore  README.md
PhoneBook/: .clang-format  CMakeLists.txt
PhoneBook/Backend/src/: client.cpp  client.h  index.cpp  person.cpp  person.h
PhoneBook/Frontend/: binding.gyp  main.js  package-lock.json  package.json
PhoneBook/Frontend/src/: index.html  index.js
PhoneBook/frontend/: CMakeLists.txt  package-lock.json  package.json
PhoneBook/frontend/public/: Main.js  index.html
PhoneBook/frontend/src/: App.js  app.jsx  index.css  index.html  index.js
PhoneBook/frontend/src/components/: Nav.css  Nav.js  Nav.jsx  sections.css
PhoneBook/frontend/src/components/AddPersonInterface/: AddPersonInterface.js  AddPersonInterface.jsx  style.css
PhoneBook/frontend/src/components/DeletePersonInterface/: DeletePersonInterface.js  style.css
PhoneBook/frontend/src/components/ModifyPersonInterface/: ModifyPersonInterface.js
PhoneBook/frontend/src/components/SearchPersonInterface/: PersonNotFound.css  SearchPersonInterface.css  SearchPersonInterface.js  SearchPersonInterface.jsx  style.css
PhoneBook/src/: CMakeLists.txt  client.h  frontend.cpp  frontend.h  main.cpp  person.h  qml.qrc
PhoneBook/src/qml/: CMakeLists.txt  SearchUserInterface.qml  main.qml
Server/: CMakeLists.txt
Server/src/: CMakeLists.txt  database.cpp  database.h  main.cpp  person.cpp  person.h  requestManager.cpp  requestManager.h  server.cpp  server.h
Spyculus/: CMakeLists.txt
Spyculus/src/: CMakeLists.txt  main.cpp
phonebook/: package-lock.json  package.json
phonebook/src/: app.jsx  index.html  index.js
phonebook/src/components/: sections.css
phonebook/src/components/AddPersonInterface/: AddPersonInterface.css  AddPersonInterface.jsx
phonebook/src/components/SearchPersonInterface/: OutputBox.css  OutputBox.jsx  PersonNotFound.jsx  SearchPersonInterface.jsx
